# coilforge-kicad

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
engine/api/: coilforge_api.c  coilforge_api.h  coilforge_api.md
engine/app/cli/: cli.c  cli.h  cli.md
engine/app/config/: config.c  config.h  config.md
engine/coil/coil/: coil.c  coil.h  coil.md
engine/coil/phase/: phase.c  phase.h  phase.md
engine/coil/stator/: stator.c  stator.h  stator.md
engine/core/errors/: errors.c  errors.h  errors.md
engine/core/types/: types.c  types.h  types.md
engine/core/units/: units.c  units.h  units.md
engine/geometry/point/: point.c  point.h  point.md
engine/geometry/polar/: polar.c  polar.h  polar.md
engine/geometry/spiral/: spiral.c  spiral.h  spiral.md
engine/geometry/vec2/: vec2.c  vec2.h
engine/kicad/footprint_writer/: footprint_writer.c  footprint_writer.h  footprint_writer.md
engine/kicad/layer_map/: layer_map.c  layer_map.h  layer_map.md
engine/kicad/sexpr/: sexpr.c  sexpr.h  sexpr.md
engine/util/fs/: fs.c  fs.h  fs.md
engine/util/log/: log.c  log.h  log.md
engine/util/str/: str.c  str.h  str.md
examples/: Geogebra_CoilMath.ggb
main/: main.c  main.md
pcm/: metadata.json
plugin/: metadata.json
plugin/plugins/: __init__.py  bridge.py  config.py  controller.py  dialog_ui.py  plugin.md  plugin.py  plugins.md  settings.py  user_settings.json  validator.py
plugin/plugins/arcs/: __init__.py  arcs.py
plugin/plugins/bridge/: __init__.py  bridge.md  bridge.py
plugin/plugins/coil/: coil.py
plugin/plugins/config/: __init__.py  config.md  config.py
plugin/plugins/controller/: __init__.py  controller.md  controller.py
plugin/plugins/dialog_ui/: __init__.py  dialog_py.md  dialog_ui.py
plugin/plugins/plugin/: __init__.py  plugin.md  plugin.py
plugin/plugins/settings/: .plugin_settings.json  __init__.py  settings.md  settings.py
plugin/plugins/validator/: __init__.py  validator.md  validator.py
plugin/python/: action_plugin.py
scripts/: build.ps1  build.sh  build_api.sh  install_plugin_dev.sh  package_pcm.sh
